<resources>
    <string name="app_name">Лабораторна робота №1</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Алгоритми</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_linear">Лінійний</string>
    <string name="menu_branching">Що розгалужується</string>
    <string name="menu_cyclic">Циклічний</string>
    <string name="menu_picture">Схема</string>
    <string name="c_label">c:</string>
    <string name="d_label">d:</string>
    <string name="a_label">a:</string>
    <string name="b_label">b:</string>
    <string name="x_label">x:</string>
    <string name="m_label">m:</string>
    <string name="n_label">n:</string>
    <string name="calculate_string">Розрахувати</string>
    <string name="scheme_button_string">Схема алгоритму</string>

    <string name="Y_string">Y = %1$.3f</string>
    <string name="y_string">y = %1$.3f</string>
    <string name="f_string">f = %1$.3f</string>
</resources>