<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_linear">

    <fragment
        android:id="@+id/nav_linear"
        android:name="com.example.lab1.ui.linear.LinearFragment"
        android:label="@string/menu_linear"
        tools:layout="@layout/fragment_linear" >
        <action
            android:id="@+id/action_nav_linear_to_nav_picture"
            app:destination="@id/nav_picture" />
    </fragment>

    <fragment
        android:id="@+id/nav_branching"
        android:name="com.example.lab1.ui.branching.BranchingFragment"
        android:label="@string/menu_branching"
        tools:layout="@layout/fragment_branching" >
        <action
            android:id="@+id/action_nav_branching_to_nav_picture"
            app:destination="@id/nav_picture" />
    </fragment>

    <fragment
        android:id="@+id/nav_cyclic"
        android:name="com.example.lab1.ui.cyclic.CyclicFragment"
        android:label="@string/menu_cyclic"
        tools:layout="@layout/fragment_cyclic" >
        <action
            android:id="@+id/action_nav_cyclic_to_nav_picture"
            app:destination="@id/nav_picture" />
    </fragment>

    <fragment
        android:id="@+id/nav_picture"
        android:name="com.example.lab1.ui.picture.PictureFragment"
        android:label="@string/menu_picture"
        tools:layout="@layout/fragment_picture" />
</navigation>