<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.linear.LinearFragment"
    tools:ignore="LabelFor">

    <EditText
        android:id="@+id/b_value"
        android:layout_width="52dp"
        android:layout_height="41dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="488dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.001"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/a_value"
        android:layout_width="51dp"
        android:layout_height="41dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="488dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.001"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/c_value"
        android:layout_width="50dp"
        android:layout_height="42dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="484dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.001"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="496dp"
        android:text="@string/c_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/c_value"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="496dp"
        android:text="@string/d_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/d_value"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/d_value"
        android:layout_width="49dp"
        android:layout_height="43dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="488dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="no" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="496dp"
        android:text="@string/b_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/b_value"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="496dp"
        android:text="@string/a_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/a_value"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.0" />

    <io.github.kexanie.library.MathView
        android:id="@+id/linear_formula_view"
        android:layout_width="322dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.426"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        auto:engine="MathJax" />

    <Button
        android:id="@+id/linear_calculate_button"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="322dp"
        android:text="@string/calculate_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/linear_scheme_button"
        android:layout_width="133dp"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="322dp"
        android:text="@string/scheme_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/linear_calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/linearResultView"
        android:layout_width="167dp"
        android:layout_height="56dp"
        android:layout_marginTop="224dp"
        android:gravity="center"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linear_calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_formula_view"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>