<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cyclic.CyclicFragment"
    tools:ignore="LabelFor">

    <io.github.kexanie.library.MathView
        android:id="@+id/cyclic_formula_view"
        android:layout_width="322dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055"
        auto:engine="MathJax" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="122dp"
        android:text="@string/n_label"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cyclicResultView"
        app:layout_constraintEnd_toStartOf="@+id/cyclic_n_value"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cyclic_formula_view"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/cyclic_calculate_button"
        android:layout_width="128dp"
        android:layout_height="59dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="322dp"
        android:text="@string/calculate_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cyclic_formula_view"
        app:layout_constraintVertical_bias="0.23" />

    <Button
        android:id="@+id/cyclic_scheme_button"
        android:layout_width="133dp"
        android:layout_height="56dp"
        android:layout_marginStart="65dp"
        android:layout_marginTop="322dp"
        android:text="@string/scheme_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cyclic_calculate_button"
        app:layout_constraintTop_toBottomOf="@+id/cyclic_formula_view"
        app:layout_constraintVertical_bias="0.227" />

    <TextView
        android:id="@+id/cyclicResultView"
        android:layout_width="167dp"
        android:layout_height="56dp"
        android:layout_marginTop="224dp"
        android:gravity="center"
        android:text=""
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cyclic_calculate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cyclic_formula_view"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/cyclic_n_value"
        android:layout_width="322dp"
        android:layout_height="45dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="no"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/cyclicResultView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cyclic_formula_view"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>